# OpenStudioLandscapes-Deadline-10-2-Worker

./: .coveragerc  README.md  pyproject.toml  pyproject_layer.toml  pyproject_layer.yaml  setup.cfg  setup.py
.nox/: pylint-report.json  pylint-report.txt
.sbom/: cyclonedx-py.3.11.json  cyclonedx-py.sbom-3.11.json  cyclonedx-py.sbom-3.12.json  pipdeptree.3.11.dot  pipdeptree.3.11.mermaid  pipdeptree.sbom-3.11.dot  pipdeptree.sbom-3.11.mermaid  pipdeptree.sbom-3.12.dot  pipdeptree.sbom-3.12.mermaid
src/OpenStudioLandscapes/Deadline_10_2_Worker/: __init__.py  _version.py  assets.py  constants.py  definitions.py  readme_feature.py
src/OpenStudioLandscapes/Deadline_10_2_Worker/config/: config_default.yml  models.py
src/OpenStudioLandscapes/Deadline_10_2_Worker/doc/: readme.py
tests/: conftest.py
