[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools-scm>=9",
    "setuptools>=80",
]

[project]
authors = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: OpenStudioLandscapes",
    "Programming Language :: Python",
]
dependencies = [
    "PyYAML",
    "dagster==1.9.11",
    "docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git@v1.0.0",
    "email-validator",
    "gitpython",
    "importlib-metadata; python_version<\"3.8\"",
    "snakemd",
]
description = "Deadline 10.2 Worker Feature for OpenStudioLandscapes (dep: OpenStudioLandscapes-Deadline-10-2)"
dynamic = [
    "version",
]
license-files = [
    "LICENSE.txt",
]
maintainers = [
    { email = "michimussato@gmail.com", name = "Michael Mussato" },
]
name = "OpenStudioLandscapes-Deadline-10-2-Worker"
requires-python = ">=3.11"

[project.entry-points]

[project.optional-dependencies]
coverage = [
    "coverage",
    "pytest",
]
dev = [
    "OpenStudioLandscapes-Deadline-10-2-Worker[coverage]",
    "OpenStudioLandscapes-Deadline-10-2-Worker[lint]",
    "OpenStudioLandscapes-Deadline-10-2-Worker[nox]",
    "OpenStudioLandscapes-Deadline-10-2-Worker[readme]",
    "OpenStudioLandscapes-Deadline-10-2-Worker[sbom]",
    "OpenStudioLandscapes-Deadline-10-2-Worker[testing]",
]
graphviz = [
    "graphviz",
    "pipdeptree",
]
lint = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Deadline-10-2 @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2.git",
    "black",
    "isort",
    "pre-commit",
    "pylint",
]
nox = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Deadline-10-2 @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2.git",
    "OpenStudioLandscapes-Deadline-10-2-Worker[testing]",
    "nox",
]
pyproject = [
    "OpenStudioLandscapesUtil-VersionBumper @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-VersionBumper.git",
]
readme = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Deadline-10-2 @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2.git",
    "OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git",
]
sbom = [
    "OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes.git",
    "OpenStudioLandscapes-Deadline-10-2 @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2.git",
    "OpenStudioLandscapes-Deadline-10-2-Worker[graphviz]",
    "cyclonedx-bom",
]
testing = [
    "pytest",
    "pytest-cov",
    "setuptools",
]

[project.readme]
content-type = "text/markdown; charset=UTF-8"
file = "README.md"

[project.urls]
Homepage = "https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2-Worker"

[tool.dagster]
code_location_name = "OpenStudioLandscapes-Deadline-10-2-Worker"
module_name = "OpenStudioLandscapes.Deadline_10_2_Worker.definitions"

[tool.setuptools]
include-package-data = true
packages = [
    "OpenStudioLandscapes.Deadline_10_2_Worker",
]
platforms = [
    "Linux",
]

[tool.setuptools.package-dir]
"" = "src"
