# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = OpenStudioLandscapes-Deadline-10-2-Worker
description = Deadline 10.2 Worker Feature for OpenStudioLandscapes (dep: OpenStudioLandscapes-Deadline-10-2)
author = Michael Mussato
author_email = michimussato@gmail.com
license = AGPL-3.0
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2-Worker

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.11

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    dagster==1.9.11
    gitpython
    PyYAML
    # yaml_tags.overrides:
    docker-compose-graph @ git+https://github.com/michimussato/docker-compose-graph.git@v1.0.0
    OpenStudioLandscapes @ git+https://github.com/michimussato/OpenStudioLandscapes@v1.0.3
    OpenStudioLandscapes-Deadline-10-2 @ git+https://github.com/michimussato/OpenStudioLandscapes-Deadline-10-2@v1.0.3


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install OpenStudioLandscapes-Deadline-10-2-Worker[PDF]` like:
# PDF = ReportLab; RXP

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov

graphviz =
    graphviz
    pipdeptree

sbom =
    OpenStudioLandscapes-Deadline-10-2-Worker[graphviz]
    cyclonedx-bom

lint =
    black
    isort
    pre-commit
    pylint

coverage =
    coverage
    pytest

nox =
    OpenStudioLandscapes-Deadline-10-2-Worker[testing]
    nox

readme =
    OpenStudioLandscapesUtil-ReadmeGenerator @ git+https://github.com/michimussato/OpenStudioLandscapesUtil-ReadmeGenerator.git@v1.0.1

dev =
    OpenStudioLandscapes-Deadline-10-2-Worker[testing]
    OpenStudioLandscapes-Deadline-10-2-Worker[lint]
    OpenStudioLandscapes-Deadline-10-2-Worker[nox]
    OpenStudioLandscapes-Deadline-10-2-Worker[sbom]
    OpenStudioLandscapes-Deadline-10-2-Worker[coverage]
    OpenStudioLandscapes-Deadline-10-2-Worker[readme]
    dagster-webserver==1.9.11

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = OpenStudioLandscapes.Deadline-10-2-Worker.module:function
# For example:
# console_scripts =
#     fibonacci = OpenStudioLandscapes.Deadline-10-2-Worker.skeleton:run
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov OpenStudioLandscapes.Deadline_10_2_Worker --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .nox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .nox
    .svg
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.6
package = Deadline_10_2_Worker
extensions =
    namespace
    no_skeleton
namespace = OpenStudioLandscapes
